@@ -99,7 +99,7 @@ class MediaViewMedia extends JView
 		// Add a delete button
 		$title = JText::_('Delete');
 		$dhtml = "<a href=\"#\" onclick=\"MediaManager.submit('folder.delete')\" class=\"toolbar\">
-					<span class=\"icon-32-delete\" title=\"$title\" type=\"Custom\"></span>
+					<span class=\"icon-32-delete\" title=\"$title\"></span>
 					$title</a>";
 		$bar->appendButton('Custom', $dhtml, 'delete');
 		JToolBarHelper::divider();
